<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.polytech.ben.tetris.OptionsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:text="@string/themes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp" />
    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/themeClassique"

        >
        <RadioButton
            android:id="@+id/themeClassique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themeClassique"
            android:onClick="changeTheme"/>
        <RadioButton
            android:id="@+id/themePolytech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themePolytech"
            android:onClick="changeTheme"/>
        <RadioButton
            android:id="@+id/themeWalkingDead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/themeWalkingDead"
            android:onClick="changeTheme"/>
    </RadioGroup>

    <TextView
        android:text="@string/mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp" />
    <RadioGroup
        android:id="@+id/modeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/modeClassique"

        >
        <RadioButton
            android:id="@+id/modeClassique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeClassique"
            android:onClick="changeMode"/>
        <RadioButton
            android:id="@+id/modeCLM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modeCLM"
            android:onClick="changeMode"/>
    </RadioGroup>
    <TextView
        android:text="@string/vit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp" />
    <RadioGroup
        android:id="@+id/vitGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/vit1"

        >
        <RadioButton
            android:id="@+id/vit1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vit1"
            android:onClick="changeVitesse"/>
        <RadioButton
            android:id="@+id/vit2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vit2"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="changeVitesse"/>
        <RadioButton
            android:id="@+id/vit3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vit3"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="changeVitesse"/>
    </RadioGroup>
    <TextView
        android:text="@string/accel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="15dp" />
    <RadioGroup
        android:id="@+id/accelGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:checkedButton="@+id/accel0"

        >
        <RadioButton
            android:id="@+id/accel0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel0"
            android:layout_gravity="center_horizontal"
            android:gravity="center|center_horizontal"
            android:onClick="changeAcceleration"/>
        <RadioButton
            android:id="@+id/accel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel1"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="changeAcceleration"/>
        <RadioButton
            android:id="@+id/accel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accel2"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:onClick="changeAcceleration"/>
    </RadioGroup>
    <TextView
        android:text="@string/musique"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="openMusic"
        android:text="@string/openMusique"/>


</LinearLayout>
</ScrollView>