<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenuPrincipal">

    <Button
        android:id="@+id/jouer"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/jouer"
        android:onClick="launchGame"
        android:padding="5dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp" />
    <Button
        android:id="@+id/instructions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_activity_page_intructions"
        android:onClick="seeInstructions"
        android:padding="5dip"
        />
    <Button
        android:id="@+id/options"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/title_activity_options"
        android:onClick="changeOptions"
        android:padding="5dip"
        />
    <Button
        android:id="@+id/highscores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/highscores"
        android:onClick="seeHighscores"
        android:padding="5dip"
        />

</LinearLayout>
